--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remotion": "^3.0.0",
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
